--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,13 +5,17 @@ body {
 @font-face {
   font-family: "icomoon";
   src: url("../icons/icomoon.eot?6159po");
-  src: url("../icons/icomoon.eot?6159po#iefix") format("embedded-opentype"), url("../icons/icomoon.ttf?6159po") format("truetype"), url("../icons/icomoon.woff?6159po") format("woff"), url("../icons/icomoon.svg?6159po#icomoon") format("svg");
+  src: url("../icons/icomoon.eot?6159po#iefix") format("embedded-opentype"),
+    url("../icons/icomoon.ttf?6159po") format("truetype"),
+    url("../icons/icomoon.woff?6159po") format("woff"),
+    url("../icons/icomoon.svg?6159po#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: "icomoon" !important;
   speak: none;
@@ -23,6 +27,46 @@ body {
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.bg-light-gray {
+  background-color: #5b5a5e;
+  padding: 10px 0;
+  width: 3rem;
+  cursor: pointer;
+}
+
+.icons-searchbar {
+  color: #5b5a5e;
+  cursor: pointer;
+  font-size: 1.3rem;
+  padding: 2px 8px 2px 0;
+}
+
+.icon-search:before {
+  content: "\e986";
+}
+
+.icon-plus:before {
+  content: "\ea0a";
+  font-size: 2rem;
+  color: #eabf00;
+}
+
+.icon-close-solid:before {
+  content: "\e900";
+}
+
+.icon-arrow-up2:before {
+  content: "\ea3a";
+}
+
+.icon-arrow-down2:before {
+  content: "\ea3e";
+}
+
+.plus-container {
+  margin-right: 1.6rem;
 }
 
 .search-container {
@@ -41,33 +85,6 @@ body {
 
 .searchbar:focus {
   outline: none;
-}
-
-.icons-searchbar {
-  color: #5b5a5e;
-  cursor: pointer;
-  font-size: 1.3rem;
-  padding: 2px 8px 2px 0;
-}
-
-.icon-search:before {
-  content: "\e986";
-}
-
-.icon-plus:before {
-  content: "\ea0a";
-}
-
-.icon-close-solid:before {
-  content: "\e900";
-}
-
-.icon-arrow-up2:before {
-  content: "\ea3a";
-}
-
-.icon-arrow-down2:before {
-  content: "\ea3e";
 }
 
 #add {
