--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,11 +4,11 @@ body {
 
 @font-face {
   font-family: "icomoon";
-  src: url("../icons/icomoon.eot?6159po");
-  src: url("../icons/icomoon.eot?6159po#iefix") format("embedded-opentype"),
-    url("../icons/icomoon.ttf?6159po") format("truetype"),
-    url("../icons/icomoon.woff?6159po") format("woff"),
-    url("../icons/icomoon.svg?6159po#icomoon") format("svg");
+  src: url("../icons/icomoon.eot?9gzrge");
+  src: url("../icons/icomoon.eot?9gzrge#iefix") format("embedded-opentype"),
+    url("../icons/icomoon.ttf?9gzrge") format("truetype"),
+    url("../icons/icomoon.woff?9gzrge") format("woff"),
+    url("../icons/icomoon.svg?9gzrge#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -36,6 +36,15 @@ body {
   cursor: pointer;
 }
 
+.cross-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 1rem;
+  color: white;
+  cursor: pointer;
+}
+
 .icons-searchbar {
   color: #5b5a5e;
   cursor: pointer;
@@ -57,12 +66,33 @@ body {
   content: "\e900";
 }
 
+.icon-cross:before {
+  content: "\ea0f";
+}
+
 .icon-arrow-up2:before {
   content: "\ea3a";
 }
 
 .icon-arrow-down2:before {
   content: "\ea3e";
+}
+
+.overlay {
+  width: 100%;
+  height: 70vh;
+  max-height: 600px;
+  background-color: #0c0b10;
+  position: absolute;
+  z-index: 100;
+}
+
+.overlay-visible {
+  top: 0;
+}
+
+.overlay-hidden {
+  top: -1000px;
 }
 
 .plus-container {
@@ -73,9 +103,9 @@ body {
   background-color: white;
   border-radius: 9999px;
   padding: 8px;
+  width: 100%;
   max-width: 350px;
   display: flex;
-  width: 100%;
 }
 
 .searchbar {
