--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,17 +5,13 @@ body {
 @font-face {
   font-family: "icomoon";
   src: url("../icons/icomoon.eot?9gzrge");
-  src: url("../icons/icomoon.eot?9gzrge#iefix") format("embedded-opentype"),
-    url("../icons/icomoon.ttf?9gzrge") format("truetype"),
-    url("../icons/icomoon.woff?9gzrge") format("woff"),
-    url("../icons/icomoon.svg?9gzrge#icomoon") format("svg");
+  src: url("../icons/icomoon.eot?9gzrge#iefix") format("embedded-opentype"), url("../icons/icomoon.ttf?9gzrge") format("truetype"), url("../icons/icomoon.woff?9gzrge") format("woff"), url("../icons/icomoon.svg?9gzrge#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: "icomoon" !important;
   speak: none;
@@ -85,6 +81,7 @@ body {
   background-color: #0c0b10;
   position: absolute;
   z-index: 100;
+  transition: top 0.7s;
 }
 
 .overlay-visible {
