--- a/public/css/main.css
+++ b/public/css/main.css
@@ -74,6 +74,11 @@ body {
   content: "\ea3e";
 }
 
+.logo {
+  width: 120px;
+  height: auto;
+}
+
 .overlay {
   width: 100%;
   height: 70vh;
@@ -81,7 +86,7 @@ body {
   background-color: #0c0b10;
   position: absolute;
   z-index: 100;
-  transition: top 0.7s;
+  transition: top 0.7s ease-out;
 }
 
 .overlay-visible {
@@ -98,10 +103,10 @@ body {
 
 .search-container {
   background-color: white;
-  border-radius: 9999px;
+  border-radius: 10px;
   padding: 8px;
   width: 100%;
-  max-width: 350px;
+  max-width: 400px;
   display: flex;
 }
 
@@ -112,6 +117,24 @@ body {
 
 .searchbar:focus {
   outline: none;
+}
+
+.search-suggestion {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 5px;
+  cursor: pointer;
+  margin-top: 0 !important;
+  max-width: 400px;
+}
+
+.search-suggestion-symbol {
+  width: 30%;
+}
+
+.search-suggestion-name {
+  width: 70%;
 }
 
 #add {
