--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,8 +4,8 @@ body {
 
 @font-face {
   font-family: "icomoon";
-  src: url("../icons/icomoon.eot?9gzrge");
-  src: url("../icons/icomoon.eot?9gzrge#iefix") format("embedded-opentype"), url("../icons/icomoon.ttf?9gzrge") format("truetype"), url("../icons/icomoon.woff?9gzrge") format("woff"), url("../icons/icomoon.svg?9gzrge#icomoon") format("svg");
+  src: url("../icons/icomoon.eot?try6eo");
+  src: url("../icons/icomoon.eot?try6eo#iefix") format("embedded-opentype"), url("../icons/icomoon.ttf?try6eo") format("truetype"), url("../icons/icomoon.woff?try6eo") format("woff"), url("../icons/icomoon.svg?try6eo#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -30,6 +30,29 @@ body {
   padding: 10px 0;
   width: 3rem;
   cursor: pointer;
+}
+
+.confirmation {
+  display: flex;
+  color: #eabf00;
+  width: 250px;
+  border-radius: 9999px;
+  border: solid 1px red;
+  justify-content: space-around;
+  padding: 10px;
+  text-transform: uppercase;
+  background-color: #0c0b10;
+  position: fixed;
+  left: 18vw;
+  transition: bottom 0.8s;
+}
+
+.confirmation-visible {
+  bottom: 40px;
+}
+
+.confirmation-hidden {
+  bottom: -200px;
 }
 
 .cross-button {
@@ -64,6 +87,10 @@ body {
 
 .icon-cross:before {
   content: "\ea0f";
+}
+
+.icon-checkmark:before {
+  content: "\ea10";
 }
 
 .icon-arrow-up2:before {
@@ -145,4 +172,22 @@ body {
 #searchBar {
   border-radius: 9999px;
   max-width: 350px;
+}
+
+@media screen and (min-width: 768px) {
+  .confirmation {
+    left: 30vw;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .confirmation {
+    left: 40vw;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .confirmation {
+    left: 40vw;
+  }
 }
