--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,8 +4,8 @@ body {
 
 @font-face {
   font-family: "icomoon";
-  src: url("../icons/icomoon.eot?try6eo");
-  src: url("../icons/icomoon.eot?try6eo#iefix") format("embedded-opentype"), url("../icons/icomoon.ttf?try6eo") format("truetype"), url("../icons/icomoon.woff?try6eo") format("woff"), url("../icons/icomoon.svg?try6eo#icomoon") format("svg");
+  src: url("../icons/icomoon.eot?rym4of");
+  src: url("../icons/icomoon.eot?rym4of#iefix") format("embedded-opentype"), url("../icons/icomoon.ttf?rym4of") format("truetype"), url("../icons/icomoon.woff?rym4of") format("woff"), url("../icons/icomoon.svg?rym4of#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -13,16 +13,34 @@ body {
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: "icomoon" !important;
+  font-family: 'icomoon' !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+  /* Enable Ligatures ================ */
+  letter-spacing: 0;
+  -webkit-font-feature-settings: "liga";
+  -moz-font-feature-settings: "liga=1";
+  -moz-font-feature-settings: "liga";
+  -ms-font-feature-settings: "liga" 1;
+  font-feature-settings: "liga";
+  -webkit-font-variant-ligatures: discretionary-ligatures;
+  font-variant-ligatures: discretionary-ligatures;
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.active {
+  color: #eabf00;
+}
+
+.arrow {
+  position: absolute;
+  font-size: 3rem;
 }
 
 .confirmation {
@@ -57,6 +75,10 @@ body {
   cursor: pointer;
 }
 
+.inactive {
+  color: #5b5a5e;
+}
+
 .icons-searchbar {
   color: #5b5a5e;
   cursor: pointer;
@@ -72,6 +94,14 @@ body {
   content: "\ea0a";
   font-size: 2rem;
   color: #eabf00;
+}
+
+.icon-point-right:before {
+  content: "\ea04";
+}
+
+.icon-point-left:before {
+  content: "\ea06";
 }
 
 .icon-close-solid:before {
@@ -92,6 +122,16 @@ body {
 
 .icon-arrow-down2:before {
   content: "\ea3e";
+}
+
+.loading {
+  border: solid 16px #5b5a5e;
+  border-top: solid 16px #eabf00;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  margin-top: 10%;
+  animation: spin 2s linear infinite;
 }
 
 .logo {
@@ -159,6 +199,13 @@ body {
   width: 70%;
 }
 
+.stocks-container {
+  height: 40vh;
+  min-height: 600px;
+  overflow-x: scroll;
+  overflow-y: scroll;
+}
+
 #add {
   font-size: 1rem;
   color: #eabf00;
@@ -167,6 +214,15 @@ body {
 #searchBar {
   border-radius: 9999px;
   max-width: 350px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @media screen and (min-width: 768px) {
