--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,18 +2,27 @@ body {
   background-color: #1b1a20;
 }
 
+svg {
+  width: 100%;
+  height: 100%;
+}
+
 @font-face {
   font-family: "icomoon";
   src: url("../icons/icomoon.eot?rym4of");
-  src: url("../icons/icomoon.eot?rym4of#iefix") format("embedded-opentype"), url("../icons/icomoon.ttf?rym4of") format("truetype"), url("../icons/icomoon.woff?rym4of") format("woff"), url("../icons/icomoon.svg?rym4of#icomoon") format("svg");
+  src: url("../icons/icomoon.eot?rym4of#iefix") format("embedded-opentype"),
+    url("../icons/icomoon.ttf?rym4of") format("truetype"),
+    url("../icons/icomoon.woff?rym4of") format("woff"),
+    url("../icons/icomoon.svg?rym4of#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
+  font-family: "icomoon" !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -41,6 +50,18 @@ body {
 .arrow {
   position: absolute;
   font-size: 3rem;
+}
+
+.axis line {
+  stroke: red;
+}
+
+.axis path {
+  stroke: red;
+}
+
+.axis text {
+  fill: red;
 }
 
 .confirmation {
@@ -201,7 +222,7 @@ body {
 
 .stocks-container {
   height: 40vh;
-  min-height: 600px;
+  min-height: 400px;
   overflow-x: scroll;
   overflow-y: scroll;
 }
