--- a/public/css/main.css
+++ b/public/css/main.css
@@ -184,6 +184,11 @@ svg {
   cursor: pointer;
 }
 
+.prompt {
+  font-size: 1.5rem;
+  color: #5b5a5e;
+}
+
 .search-container {
   background-color: white;
   border-radius: 10px;
