--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,7 @@ body {
 
 svg {
   width: 100%;
-  height: 100%;
+  height: 100;
 }
 
 @font-face {
@@ -259,10 +259,20 @@ svg {
 }
 
 .stocks-scroller {
-  /* display: flex; */
   flex-wrap: nowrap;
-  overflow-x: scroll;
+  overflow-x: auto;
+  -ms-overflow-style: none;
 }
+
+.stocks-scroller svg{
+  max-height: 430px;
+}
+
+ /* hide scrollbar in all major browsers*/
+.stocks-scroller::-webkit-scrollbar{
+  display: none;
+}
+
 
 .values-container {
   margin-top: 3rem;
